--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <depend>device_interface</depend>
   <depend>behavior_interface</depend>
   <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <export>
     <build_type>ament_python</build_type>
